--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-iife": "^0.3.0",
     "gulp-jsbeautifier": "^2.0.3",
     "gulp-uglify": "^1.5.4",
+    "gulp-uglify-cli": "^0.1.7",
     "gulp-util": "^3.0.7"
   }
 }
